--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "./components/all";
+@import "../components/Authorization/Authorization.module.scss";
 @import url("https://fonts.googleapis.com/css2?family=Jost&display=swap");
 
 * {
