--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -1,13 +1,24 @@
 .block-title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    h3 {
-        font-size: 40px;
-    }
+  @media (max-width: 965px) {
+    gap: 10px;
+  }
 
-    p {
-        font-size: 18px;
+  h3 {
+    font-size: 40px;
+
+    @media (max-width: 965px) {
+      width: 300px;
+
+      text-align: center;
+      line-height: 40px;
     }
+  }
+
+  p {
+    font-size: 18px;
+  }
 }
